<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebClip</string>
    <string name="transparent_grid">Transparent grid</string>
    <string name="back_button">Back</string>
    <string name="forward_button">Forward</string>
    <string name="reload_button">Reload</string>
    <string name="settings">Settings</string>
    <string name="url_hint">input URL or search word</string>
    <string name="go">Go</string>
    <string name="app_info">App info</string>
    <string name="cancel">Cancel</string>

    <string name="download">Download</string>
    <string name="open_in_other_app">Open in other app</string>
    <string name="toast_download_failed">Download failed</string>
    <string name="toast_download_saved">Saved</string>
    <string name="toast_failed_to_open">Fail to open</string>

    <string name="toast_success_to_grant_storage_permission">Storage access permission has been granted. You can download. Please try again</string>
    <string name="toast_fail_to_grant_storage_permission">You need to grant storage access permission to download</string>

    <string name="dialog_permission_title">Please allow permission</string>
    <string name="dialog_microphone_permission_message">Couldn\'t access to storage.\nPlease allow permission from \"App Info\", to download</string>

    <string name="pref_title_use_extension">Use extension library</string>
    <string name="pref_title_copyright">Author</string>
    <string name="pref_message_copyright">c 2018 大前良介 (OHMAE Ryosuke)</string>
    <string name="pref_title_version_number">Version</string>
    <string name="pref_title_license">Open Source Licenses</string>
    <string name="pref_message_license">Show license of OSS used in this app</string>
    <string name="pref_title_source_code">Source code</string>
    <string name="pref_message_source_code">Source code of this app is published under the MIT license</string>
</resources>
