<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="USE_EXTENSION"
        android:title="@string/pref_title_use_extension"
        app:iconSpaceReserved="false"
        app:persistent="false"
        />

    <Preference
        android:key="VERSION_NUMBER"
        android:title="@string/pref_title_version_number"
        app:iconSpaceReserved="false"
        app:persistent="false"
        />

    <Preference
        android:key="COPYRIGHT"
        android:summary="@string/pref_message_copyright"
        android:title="@string/pref_title_copyright"
        app:iconSpaceReserved="false"
        app:persistent="false"
        />

    <Preference
        android:key="SOURCE_CODE"
        android:summary="@string/pref_message_source_code"
        android:title="@string/pref_title_source_code"
        app:iconSpaceReserved="false"
        app:persistent="false"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/ohmae/touch-icon-extractor"
            android:targetClass="net.mm2d.webclip.MainActivity"
            android:targetPackage="net.mm2d.webclip"
            />
    </Preference>

    <Preference
        android:key="LICENSE"
        android:summary="@string/pref_message_license"
        android:title="@string/pref_title_license"
        app:iconSpaceReserved="false"
        app:persistent="false"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="file:///android_asset/license.html"
            android:targetClass="net.mm2d.webclip.MainActivity"
            android:targetPackage="net.mm2d.webclip"
            />
    </Preference>
</PreferenceScreen>
