<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.App.AppBarOverlay"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.App.PopupOverlay"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:alpha="0.5"
            android:progressDrawable="@drawable/progress"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_download"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?android:attr/windowBackground"
        android:clickable="true"
        android:orientation="vertical"
        tools:ignore="KeyboardInaccessibleWidget,Overdraw"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_navigation"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <TextView
                android:id="@+id/site_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/text_title"
                android:textSize="@dimen/text_title"
                tools:text="Yahoo! JAPAN"
                />

            <TextView
                android:id="@+id/site_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/text_url"
                android:textSize="@dimen/text_url"
                tools:text="https://m.yahoo.co.jp/"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url_hint"
            android:inputType="textUri"
            android:autofillHints=""
            />

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/go"
            android:layout_marginEnd="8dp"
            />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_touch"
            android:drawablePadding="@dimen/margin"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_large"
            android:text="@string/back_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableStartCompat="@drawable/ic_back"
            />

        <TextView
            android:id="@+id/forward_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_touch"
            android:drawablePadding="@dimen/margin"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_large"
            android:text="@string/forward_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableStartCompat="@drawable/ic_forward"
            />

        <TextView
            android:id="@+id/reload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_touch"
            android:drawablePadding="@dimen/margin"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_large"
            android:text="@string/reload_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableStartCompat="@drawable/ic_reload"
            />

        <TextView
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_touch"
            android:drawablePadding="@dimen/margin"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_large"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:drawableStartCompat="@drawable/ic_settings"
            />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
